[package]
name = "rust-device-detector-test"
version = "0.1.0"
edition = "2021"

[dependencies]
proxy-wasm = "0.2"
rust-device-detector = { git = "https://github.com/simplecastapps/rust-device-detector.git", branch = "main" }
lazy_static = "1.4"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[profile.release]
lto = true
opt-level = "s"  # Optimize for size (better for WASM)
